fix(Tokens): 🐛 Fix missing unit on css spacing tokens (#512)

--- a/packages/tokens/brand/tilsynet/tokens.css
+++ b/packages/tokens/brand/tilsynet/tokens.css
@@ -183,25 +183,25 @@
   --fds-spacing-26: calc((var(--fds-base_spacing)*26/16)*var(--fds-font-size-f0));
   --fds-spacing-30: calc((var(--fds-base_spacing)*30/16)*var(--fds-font-size-f0));
   --fds-base_spacing: 4;
-  --fds-sizing-1: 4;
-  --fds-sizing-2: 8;
-  --fds-sizing-3: 12;
-  --fds-sizing-4: 16;
-  --fds-sizing-5: 20;
-  --fds-sizing-6: 24;
-  --fds-sizing-7: 28;
-  --fds-sizing-8: 32;
-  --fds-sizing-10: 40;
-  --fds-sizing-12: 48;
-  --fds-sizing-14: 56;
-  --fds-sizing-18: 72;
-  --fds-sizing-22: 88;
-  --fds-sizing-26: 104;
-  --fds-sizing-30: 120;
-  --fds-base_sizing: 4;
-  --fds-component-mode-height-small: 40;
-  --fds-component-mode-height-medium: 48;
-  --fds-component-mode-height-large: 56;
+  --fds-sizing-1: 4px;
+  --fds-sizing-2: 8px;
+  --fds-sizing-3: 12px;
+  --fds-sizing-4: 16px;
+  --fds-sizing-5: 20px;
+  --fds-sizing-6: 24px;
+  --fds-sizing-7: 28px;
+  --fds-sizing-8: 32px;
+  --fds-sizing-10: 40px;
+  --fds-sizing-12: 48px;
+  --fds-sizing-14: 56px;
+  --fds-sizing-18: 72px;
+  --fds-sizing-22: 88px;
+  --fds-sizing-26: 104px;
+  --fds-sizing-30: 120px;
+  --fds-base_sizing: 4px;
+  --fds-component-mode-height-small: 40px;
+  --fds-component-mode-height-medium: 48px;
+  --fds-component-mode-height-large: 56px;
   --fds-border_width-default: 1px;
   --fds-border_width-active: 2px;
   --fds-border_width-tab_focus: 2px;
